--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ venv/
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
-
+.idea/workspace.xml
 # Sensitive or high-churn files
 .idea/**/dataSources/
 .idea/**/dataSources.ids
